# mcp-server

./: Cargo.toml  README.md  test_mcp_server.py
docs/: README.md  architecture-overview.md  authentication-flow.md  concurrency-model.md  dynamic-tool-handlers.md  error-handling-flow.md  http-request-flow.md  http-streaming-flow.md  protocol-message-flow.md  sequence-interaction-flow.md  session-management.md  sse-connection-flow.md  state-management.md  system-initialization-flow.md  tool-registration-flow.md
examples/: basic_server.rs  dynamic_tools.rs  mcp-server.toml  tool-config.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/client/: mod.rs
src/client/features/: mod.rs  roots.rs  sampling.rs
src/protocol/: handler.rs  messages.rs  mod.rs  validation.rs
src/server/: mod.rs
src/server/features/: completion.rs  logging.rs  mod.rs  prompts.rs  resources.rs  tools.rs
src/transport/: http.rs  mod.rs  session.rs  stdio.rs
src/utils/: auth.rs  logging.rs  mod.rs  validation.rs
